--- a/src/assets/css/classGallery.css
+++ b/src/assets/css/classGallery.css
@@ -1,18 +1,42 @@
 .p-galleria-thumbnail-container {
-    width: 100% !important;
+  width: 100% !important;
 }
 
 .p-galleria-thumbnail-items {
-    justify-content: space-between !important;
-    width: 100% !important;
+  justify-content: space-between !important;
+  width: 100% !important;
 }
 
-.p-galleria .p-galleria-item-prev, 
+.p-galleria .p-galleria-item-prev,
 .p-galleria .p-galleria-item-next {
-    color: white !important;
+  color: white !important;
 }
 
-.p-galleria .p-galleria-item-prev:hover, 
+.p-galleria .p-galleria-item-prev:hover,
 .p-galleria .p-galleria-item-next:hover {
-    background-color: rgba(255, 255, 255, 0.2) !important;
+  background-color: rgba(255, 255, 255, 0.2) !important;
+}
+
+.custom-toast-success {
+  background-color: #1c6b37 !important;
+  color: white !important;
+  font-family: "Poppins", sans-serif;
+  border-left: 6px solid #22c55e;
+  padding: 14px 18px;
+  display: flex;
+  font-weight: 500;
+  font-size: 14px;
+  border-radius: 8px;
+  max-width: 420px;
+}
+
+.custom-toast-default {
+  background-color: #121212 !important;
+  color: white !important;
+  padding: 14px 18px;
+  display: flex;
+  font-weight: 500;
+  font-size: 14px;
+  border-radius: 8px;
+  max-width: 420px;
 }
